--- a/level-1/index.html
+++ b/level-1/index.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
       <!-- CSS - start coding here -->
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">  
       <link rel="stylesheet" href="css/custom.css">
       <title>Hello!</title>
    </head>
@@ -26,8 +27,8 @@
                         images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_720.jpg 720w, 
                         images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg 1400w"/>
                   </div>
-                  <div class="col-sm-12 col-md-6 p-0">
-                     <div class="d-flex flex-column description-container mx-auto">
+                  <div class="col-sm-12 col-md-6 description-container p-0">
+                     <div class="d-flex flex-column text-container mx-auto">
                         <h1 class="h1 m-0">Lorem Ipsum</h1>
                         <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipis scing elit. Pellentesque ac nisi felis. Suspendisse ut finibus augue.</p>
                         <button class="btn align-self-end p-0">Button</button>
