--- a/level-2/index.html
+++ b/level-2/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Final CSS -->
-    <link rel="stylesheet" href="dist/custom.css?cb=1644746978508">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="dist/custom.css?cb=1644964908201">
 
     <title>Hello!</title>
   </head>
@@ -23,8 +24,8 @@
                           images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_720.jpg 720w, 
                           images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg 1400w"/>
                     </div>
-                    <div class="col-sm-12 col-md-6 p-0">
-                       <div class="d-flex flex-column description-container mx-auto">
+                    <div class="col-sm-12 col-md-6 p-0 border-light">
+                       <div class="d-flex flex-column text-container mx-auto">
                           <h1 class="h1 text-black m-0">Lorem Ipsum</h1>
                           <p class="text-black m-0">Lorem ipsum dolor sit amet, consectetur adipis scing elit. Pellentesque ac nisi felis. Suspendisse ut finibus augue.</p>
                           <button class="btn btn-primary text-secondary align-self-end p-0" data-toggle="tooltip" data-placement="top">Button</button>
@@ -42,6 +43,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <!-- Final JS -->
-    <script src="dist/all.js?cb=1644746978508"></script>
+    <script src="dist/all.js?cb=1644964908201"></script>
   </body>
 </html>
